<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="smpt42.nl.printmanager.view.LoginActivity">


    <ImageView
        android:id="@+id/LogoImage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginTop="50dp"
        android:adjustViewBounds="true"
        android:src="@drawable/oce_grijs" />

    <TextView
        android:id="@+id/app_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/LogoImage"
        android:layout_centerHorizontal="true"
        android:text="@string/app_name"
        android:textAllCaps="true"
        android:textColor="@color/red"
        android:textSize="25dp" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@id/app_name"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/edit_text"
        android:imeOptions="actionNext"
        android:paddingLeft="10dp"
        android:text="@string/username"
        android:textColor="@color/light_red" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/edit_text"
        android:imeOptions="actionGo"
        android:paddingLeft="10dp"
        android:text="@string/password"
        android:textColor="@color/light_red" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/login_btn_selector"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:text="@string/login"
        android:textColor="@color/white" />


</RelativeLayout>
