<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="smpt42.nl.printmanager.view.ScanResultActivity"
    android:background="@color/background">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/details"
        android:id="@+id/Details"
        android:gravity="center"
        android:background="@color/white"
        android:layout_alignParentTop="true"
        android:textColor="@color/black"
        android:textSize="20dp"/>


    <ImageButton
        android:layout_width="50dp"
        android:layout_height="30dp"
        android:background="@drawable/arrow_red"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="10dp"/>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_below="@id/Details"
        android:id="@+id/Name">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/red"
            android:text="Name"
            android:gravity="center"
            android:textSize="30dp"
            android:textColor="@color/white"
            android:id="@+id/textViewName"/>

        <ImageView
            android:layout_width="80dp"
            android:layout_height="match_parent"
            android:src="@drawable/test_picture"
            android:layout_marginLeft="10dp"/>

    </FrameLayout>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@id/Name"
        android:id="@+id/DetailsArrow"
        android:background="@color/dark_red">
        <TextView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@color/red"
            android:text="@string/details"
            android:textSize="20dp"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/white"/>

    </FrameLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DetailsArrow"
        android:id="@+id/Table"
        android:background="@color/white"
        android:paddingLeft="10dp">
        <TableRow>
            <TextView
                android:layout_height="60dp"
                android:paddingTop="10dp"
                android:text="@string/name"
                android:textSize="20dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_height="60dp"
                android:paddingTop="10dp"
                android:text="Tekst hier"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:id="@+id/textViewNameValue"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_height="50dp"
                android:text="@string/company"
                android:textSize="20dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_height="50dp"
                android:text="Tekst hier"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:id="@+id/textViewCompanyValue"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_height="50dp"
                android:text="@string/adres"
                android:textSize="20dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_height="50dp"
                android:text="Tekst hier"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:id="@+id/textViewAdresValue"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_height="50dp"
                android:text="@string/tel"
                android:textSize="20dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_height="50dp"
                android:text="Tekst hier"
                android:textSize="20dp"
                android:textColor="@color/red"
                android:id="@+id/textViewTelValue"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_height="50dp"
                android:text="@string/scanned_date"
                android:textSize="20dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_height="50dp"
                android:text="Tekst hier"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:id="@+id/textViewScannedDateValue"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_height="50dp"
                android:text="@string/printed_date"
                android:textSize="20dp"
                android:textColor="@color/black"/>
            <TextView
                android:layout_height="50dp"
                android:text="Tekst hier"
                android:textSize="20dp"
                android:textColor="@color/black"
                android:id="@+id/textViewPrintedDateValue"/>
        </TableRow>

        </TableLayout>


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="25dp"
        android:layout_below="@id/Table"
        android:id="@+id/StatusArrow"
        android:background="@color/dark_red">
        <TextView
            android:layout_width="90dp"
            android:layout_height="match_parent"
            android:background="@color/red"
            android:text="@string/status"
            android:textSize="20dp"
            android:paddingLeft="10dp"
            android:gravity="center_vertical"
            android:textColor="@color/white"/>

    </FrameLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listViewTasks"
        android:layout_marginTop="45dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/Table" />
</RelativeLayout>
