<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="@color/background"
    tools:context="smpt42.nl.printmanager.view.AccountActivity">

    <TextView
        android:id="@+id/Account"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:background="@color/white"
        android:gravity="center"
        android:text="@string/account"
        android:textColor="@color/black"
        android:textSize="17dp" />


    <ImageButton
        android:id="@+id/backImageButton"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="12.5dp"
        android:background="@drawable/arrow_red" />


    <FrameLayout
        android:id="@+id/Name"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_below="@id/Account">

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/red"
            android:gravity="center"
            android:text="Name"
            android:textColor="@color/white"
            android:textSize="30dp" />

        <ImageView
            android:id="@+id/userImage"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:padding="10dp"
            android:src="@drawable/piet" />

    </FrameLayout>

    <FrameLayout
        android:id="@+id/DetailsArrow"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_below="@id/Name"
        android:background="@color/dark_red">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/DetailsArrowText"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:background="@color/red"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:text="@string/personal"
                android:textColor="@color/white"
                android:textSize="15dp" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:adjustViewBounds="true"
                android:src="@drawable/red_triangle" />

        </LinearLayout>


    </FrameLayout>

    <TableLayout
        android:id="@+id/Table"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/DetailsArrow"
        android:background="@color/white"
        android:paddingLeft="10dp">


        <TableRow>

            <TextView
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/name"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textViewNameValue"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:paddingTop="10dp"
                android:text="Tekst hier"
                android:textColor="@color/black"
                android:textSize="15dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/company"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textViewCompanyValue"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:text="Tekst hier"
                android:textColor="@color/black"
                android:textSize="15dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/address"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textViewAdresValue"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:text="Tekst hier"
                android:textColor="@color/black"
                android:textSize="15dp" />
        </TableRow>

        <TableRow>

            <TextView
                android:layout_height="40dp"
                android:gravity="center_vertical"
                android:text="@string/tel"
                android:textColor="@color/black"
                android:textSize="15dp" />

            <TextView
                android:id="@+id/textViewTelValue"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:gravity="center_vertical"
                android:text="Tekst hier"
                android:textColor="@color/red"
                android:textSize="15dp" />
        </TableRow>
    </TableLayout>

    <LinearLayout
        android:id="@+id/logoutLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/bottomButtonImage"
        android:layout_below="@id/Table"
        android:layout_gravity="center"
        android:gravity="center">

        <Button
            android:id="@+id/logoutBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginLeft="80dp"
            android:layout_marginRight="80dp"
            android:background="@drawable/login_btn_pressed"
            android:drawableLeft="@drawable/logout_white"
            android:drawableStart="@drawable/logout_white"
            android:text="@string/logout"
            android:textColor="@color/white"
            android:textSize="17dp" />

    </LinearLayout>


    <LinearLayout
        android:id="@+id/bottomButtonImage"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_above="@+id/bottomButtonName"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="3">

        <ImageView
            android:id="@+id/historyImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:src="@drawable/history" />

        <ImageView
            android:id="@+id/scanImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:src="@drawable/qr_black" />

        <ImageView
            android:id="@+id/accountImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:src="@drawable/profile_red" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomButtonName"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="7dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/historyText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/history"
            android:textColor="@color/black"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/scanText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/scan"
            android:textColor="@color/black"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/accountText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/account"
            android:textColor="@color/red"
            android:textSize="10dp" />

    </LinearLayout>

</RelativeLayout>
