<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:id="@+id/historyParent"
    tools:context=".MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:text="@string/history"
        android:id="@+id/lblTitle"
        android:layout_alignParentTop="true"
        android:textSize="17dp"
        android:textColor="@color/black"
        android:background="@color/white"
        android:gravity="center_horizontal|center_vertical" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@id/lblTitle"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#ffff0000"
        android:gravity="center_vertical|center_horizontal"
        android:id="@+id/linearLayout">

        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="Date"
            android:textColor="#fff"
            android:background="@drawable/sort_button_left"

            android:id="@+id/btnDate" />

        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="Company"
            android:background="@drawable/sort_button_centre_inactive"
            android:textColor="#f00"
            android:id="@+id/btnCompany" />

        <Button
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:text="Starred"
            android:textColor="#f00"
            android:background="@drawable/sort_button_right_inactive"
            android:id="@+id/btnStarred" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="60dp"
        android:layout_below="@+id/linearLayout"
        android:id="@+id/searchBarLabel"
        android:weightSum="1"
        android:gravity="center_vertical">


        <ImageView
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:id="@+id/imageView"
            android:background="@android:drawable/ic_search_category_default" />

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/editText"
            android:hint="Search"
            android:textSize="15dp"
            android:textAlignment="center"
            android:maxLines="1"
            android:layout_weight="1" />
    </LinearLayout>

    <ListView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/listView"
        android:layout_below="@+id/searchBarLabel"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_above="@+id/bottomButtonImage"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:layout_above="@+id/bottomButtonName"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingTop="10dp"
        android:weightSum="3"
        android:id="@+id/bottomButtonImage">

        <ImageView
            android:id="@+id/historyImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:src="@drawable/history_red" />

        <ImageView
            android:id="@+id/scanImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:src="@drawable/qr_black" />

        <ImageView
            android:id="@+id/accountImage"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:adjustViewBounds="true"
            android:src="@drawable/profile" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/bottomButtonName"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_alignParentBottom="true"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingBottom="7dp"
        android:weightSum="3">

        <TextView
            android:id="@+id/historyText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/history"
            android:textColor="@color/red"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/scanText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/scan"
            android:textColor="@color/black"
            android:textSize="10dp" />

        <TextView
            android:id="@+id/accountText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/account"
            android:textColor="@color/black"
            android:textSize="10dp" />

    </LinearLayout>


</RelativeLayout>
